final_solution/istio_components/deployment_feature.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-feature
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
        version: feature
    spec:
      containers:
      - name: nodejs
        image: hmerac/nodejs:feature
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
