final_solution/istio_components/deployment_production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
        version: production
    spec:
      containers:
      - name: nodejs
        image: hmerac/nodejs:production
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
