final_solution/istio_components/destination_rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodejs
spec:
  host: nodejs
  subsets:
  - name: feature
    labels:
      version: feature
  - name: production
    labels:
      version: production
