final_solution/istio_components/virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trivago
spec:
  hosts:
  - "*"
  gateways:
  - trivago-gateway
  http:
    - route:
      - destination:
          host: trivago
          subset: go
        weight: 70
      - destination:
          host: trivago
          subset: java
        weight: 30
